--- a/src/views/product-edit-form.ejs
+++ b/src/views/product-edit-form.ejs
@@ -18,15 +18,15 @@
 				<div class="row product-detail">
 					<div class="col-12 col-md-6">
 						<label for="name" class="form-label">Nombre del juego:</label>
-						<input value="<%= producto.name %>" type="text" id="name" name="name" placeholder="Ej: Zapatillas Reebok" class="form-input">
+						<input value="<%= producto.name %>" type="text" id="name" name="name" placeholder="Indica el nombre..." class="form-input">
 					</div>
 					<div class="col-12 col-md-6">
 						<label for="price" class="form-label">Precio del juego:</label>
-						<input value="<%= producto.price %>" type="text" id="price" name="price" placeholder="Ej: 5678" class="form-input">
+						<input value="<%= producto.price %>" type="text" id="price" name="price" placeholder="Indica el precio..." class="form-input">
 					</div>
 					<div class="col-12 col-md-6">
 						<label for="discount" class="form-label">Descuento:</label>
-						<input value="<%= producto.discount %>" type="text" id="discount" name="discount" placeholder="Ej: 15" class="form-input">
+						<input value="<%= producto.discount %>" type="text" id="discount" name="discount" placeholder="tendrá descuento?" class="form-input">
 					</div>
 					<div class="col-12 col-md-6">
 						<label for="category" class="form-label">Categoría:</label>
