--- a/src/views/partials/headerNavbar.ejs
+++ b/src/views/partials/headerNavbar.ejs
@@ -36,9 +36,9 @@
 			</ul>
 
 			<ul class="right-navbar">
-				<li><a href="#">Registrate <i class="far fa-address-card"></i></a></li>
-				<li><a href="#">Ingresá <i class="fas fa-sign-in-alt"></i></a></li>
-				<li><a href="#">LLevátelo <i class="fas fa-shopping-basket"></i></a></li>
+				<li><a href="register">Registrate <i class="far fa-address-card"></i></a></li>
+				<li><a href="login">Ingresá <i class="fas fa-sign-in-alt"></i></a></li>
+				<li><a href="store">Mis compras <i class="fas fa-shopping-basket"></i></a></li>
 			</ul>
 		</nav>
 	</div>
