--- a/src/views/partials/headerNavbar.ejs
+++ b/src/views/partials/headerNavbar.ejs
@@ -36,8 +36,8 @@
 			</ul>
 
 			<ul class="right-navbar">
-				<li><a href="register">Registrate <i class="far fa-address-card"></i></a></li>
-				<li><a href="login">Ingresá <i class="fas fa-sign-in-alt"></i></a></li>
+				<li><a href="/users/register">Registrate <i class="far fa-address-card"></i></a></li>
+				<li><a href="/users/login">Ingresá <i class="fas fa-sign-in-alt"></i></a></li>
 				<li><a href="store">Mis compras <i class="fas fa-shopping-basket"></i></a></li>
 			</ul>
 		</nav>
