--- a/src/views/users/login.ejs
+++ b/src/views/users/login.ejs
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-    
+
+<%- include('../partials/head', {title: 'Login'}) %>
+
 <body>
     
 
@@ -153,7 +155,9 @@
 
     </footer>
         
-
+<!-- footer -->
+<%- include('../partials/footer') %>
+<!-- /footer -->
 
 </body>
 </html>
