--- a/public/css/app.css
+++ b/public/css/app.css
@@ -258,7 +258,7 @@ figure:hover {
 }
 
 /*====== Footer ======*/
-.main-footer {
+/* .main-footer {
   background-color: #ffffff;
   padding: 20px 0;
   margin-top: 80px;
@@ -298,7 +298,7 @@ figure:hover {
 
 .copyright {
   text-align: center;
-}
+} */
 
 /*====== Product Detail ======*/
 .product-detail {
