--- a/public/css/footer.css
+++ b/public/css/footer.css
@@ -23,7 +23,7 @@ footer {
     min-height: 350px;
 }
 
-.footer-global {
+.main-footer {
     padding: 10px;
     display: flex;
     flex-direction: row;
@@ -36,12 +36,14 @@ footer {
     border-color: blue;*/
 
 }
-
-section {
-    width: 90%;
+.main-footer ul li {
+    list-style: none;
 }
 
-.footer-global h3 {
+
+
+
+.main-footer h3 {
     padding-top: 4px;
     padding-bottom: 10px;
     font-size: 24px;
@@ -49,7 +51,7 @@ section {
 }
 
 ul li {
-    list-style-type: none;
+    list-style: none;
 }
 
 .wording {
@@ -58,7 +60,7 @@ ul li {
     padding-bottom: 5px;
 }
 
-.footer-global ul li {
+.main-footer ul li {
     font-size: 12px;
     font-weight: light;
 }
@@ -68,15 +70,15 @@ ul li {
     text-align: left;
 }
 
-section {
+/* section {
     padding: 10px;
-}
+} */
 
 /*////////////////////////////////////////////////////////////*/
 /*/////////////////// MEDIA QUERIES //////////////////////////*/
 /*////////////////////////////////////////////////////////////*/
 
-
+/* 
 @media (min-width: 700px) {
 
     section {
@@ -92,4 +94,4 @@ section {
     }
 
 }
-
+ */
