--- a/src/views/partials/head.ejs
+++ b/src/views/partials/head.ejs
@@ -8,4 +8,12 @@
 	<link rel="stylesheet" href="/css/bootstrap-grid.min.css">
 	<!-- Own Stylesheet -->
 	<link rel="stylesheet" href="/css/app.css">
+	<!-- Own Stylesheet -->
+	<link rel="stylesheet" href="/css/login.css">
+
+	<!-- <link rel="stylesheet" href="/css/footer.css"> -->
+
+	<link rel="stylesheet" href="/css/header.css">
+
+	<script src="https://kit.fontawesome.com/ccb79c327a.js" crossorigin="anonymous"></script>
 </head>
