--- a/src/views/partials/head.ejs
+++ b/src/views/partials/head.ejs
@@ -7,13 +7,17 @@
 	<!-- Bootstrap Grid Stylesheet -->
 	<link rel="stylesheet" href="/css/bootstrap-grid.min.css">
 	<!-- Own Stylesheet -->
-	<link rel="stylesheet" href="/css/app.css">
+	<!--<link rel="stylesheet" href="/css/app.css"> -->
 	<!-- Own Stylesheet -->
 	<link rel="stylesheet" href="/css/login.css">
-
+	<!--<link rel="stylesheet" href="/css/header.css"> -->
 	<!-- <link rel="stylesheet" href="/css/footer.css"> -->
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet" />
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Chivo+Mono&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/ccb79c327a.js" crossorigin="anonymous"></script>
 
-	<link rel="stylesheet" href="/css/header.css">
 
 	<script src="https://kit.fontawesome.com/ccb79c327a.js" crossorigin="anonymous"></script>
 </head>
