--- a/public/css/register.css
+++ b/public/css/register.css
@@ -5,6 +5,10 @@
     font-family: 'Chivo Mono', monospace;
 }
 
+/*////////////////////////////////////////////////////////////*/
+/*///////////////////  Register //////////////////////////////*/
+/*////////////////////////////////////////////////////////////*/
+
 main {
     /*
     border-style: solid;
@@ -15,12 +19,13 @@ main {
     justify-content: center
 }
 
-.caja-main{
+.register-widget {
     width: 80%;
     height: 80%;
     background-color: lightgray;
+    flex-direction: column;
+    align-items: center;
     margin: 50px;
-    text-align: center;
 }
 
 .formulario-register {
@@ -34,18 +39,21 @@ main {
 .campo {
     display: block;
     margin-bottom: 2rem;
+    padding-left: 0.75rem;
     width: 100%;
     background-color: #ffffff;
     border-radius: 4px;
 }
 
-input {
-    display: block;
-    width: 100%;
-    padding: 15px;
+.campo input {
+    /* width: 100%; */
+    /* height: 100%; */
+    padding: 0.75rem 0;
 }
 
-
+input {
+    display: block;
+}
 button, input {
     border: none;
     background-image: none;
@@ -56,12 +64,10 @@ button, input {
     outline: none;
 }
 
-.boton-entrar button{
+.boton-crear button {
+    width: 100%;
+    padding: 0.75rem;
     background-color: #03264C;
     border-radius: 4px;
     color: #ffffff;
-    padding: 2%;
-    width: 100%;
 }
-
-
