--- a/src/views/products.ejs
+++ b/src/views/products.ejs
@@ -1,10 +1,10 @@
-«<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="es">
 <!-- Include Head -->
 <%- include('partials/head', {title: 'Todos los juegos'}) %>
 <body>
 	<!-- Header -->
-	<%- include('partials/headerNavbar') %>
+	<%- include('partials/header') %>
 	<!-- /Header -->
 
 	<!-- todos los juegos -->
