--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -1,14 +1,21 @@
 <!DOCTYPE html>
 <html lang="es">
+
+<head>
+	<link rel="stylesheet" href="/css/home.css">
+</head>
 <!-- Include Head -->
 <%- include('partials/head', {title: 'Inicio'}) %>
+
 <body>
 	<!-- Header -->
 	<%- include('partials/header') %>
 	<!-- /Header -->
 	
 	<!-- Banner -->
-	<div class="banner"></div>
+	<div class="banner">
+		<img id="banner-img" src="/images/banner-ea.jpeg" alt= "Banner Index">
+	</div>
 	<!-- /Banner -->
 
 	<!-- Nuevos juegos -->
