--- a/src/views/partials/head.ejs
+++ b/src/views/partials/head.ejs
@@ -9,7 +9,7 @@
 	<!-- Own Stylesheet -->
 	<!--<link rel="stylesheet" href="/css/app.css"> -->
 	<!-- Own Stylesheet -->
-	<link rel="stylesheet" href="/css/login.css">
+	<!-- <link rel="stylesheet" href="/css/login.css"> -->
 	<!--<link rel="stylesheet" href="/css/header.css"> -->
 	<!-- <link rel="stylesheet" href="/css/footer.css"> -->
 	<link rel="preconnect" href="https://fonts.googleapis.com">
