--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -11,12 +11,18 @@
 	<!-- Header -->
 	<%- include('partials/header') %>
 	<!-- /Header -->
-	
+
 	<!-- Banner -->
+
+<figure id="figure-banner">		
 	<div class="banner">
 		<img id="banner-img" src="/images/banner-ea.jpeg" alt= "Banner Index">
 	</div>
+</figure>	
+
 	<!-- /Banner -->
+
+<main>
 
 	<!-- Nuevos juegos -->
 	<div class="container products-wrapper">
@@ -74,7 +80,7 @@
 		</div>
 	</div>
 	<!-- /Ofertas -->
-
+</main>
 	<!-- footer -->
 	<%- include('partials/footer') %>
 	<!-- /footer -->
