--- a/public/css/home.css
+++ b/public/css/home.css
@@ -162,7 +162,7 @@ main{
     .producto{
         width: 45%; 
     }
-
+}
 
 /********************************************
                   Desktop 
