--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -35,14 +35,14 @@
 				<div class="col-12 col-sm-6 col-lg-3">
 					<section class="product-box">
 						<a href="/products/detail/<%= producto.id %>">
-							<figure class="product-box_image">
+							<figure class="product-box-image">
 								<img src="/images/products/<%= producto.image %>" alt="imagen de producto">
 							</figure>
-							<article class="product-box_data">
+							<article class="product-box-data">
 								<h2>$<%= producto.price %></h2>
 								<span><%= producto.discount %> % </span>
-								<p><%= producto.name %></p>
-								<i class="fas fa-truck"></i>
+								<p class="game-title"><%= producto.name %></p>
+								<p class="game-description"><%= producto.description %></p>
 							</article>
 						</a>
 					</section>
