--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -39,8 +39,8 @@
 								<img src="/images/products/<%= producto.image %>" alt="imagen de producto">
 							</figure>
 							<article class="product-box-data">
-								<h2>$<%= producto.price %></h2>
-								<span><%= producto.discount %> % </span>
+								<h2 class="price">$<%= producto.price %></h2>
+								<span class="discount"><p><%= producto.discount %> % </p></span>
 								<p class="game-title"><%= producto.name %></p>
 								<p class="game-description"><%= producto.description %></p>
 							</article>
