--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -53,33 +53,37 @@
 	</div>
 	<!-- /juegos nuevos -->
 
-	<!-- Ofertas -->
+
+<!-- Ofertas -->
 	<div class="container products-wrapper">
 		<div class="row">
 			<div class="col-12">
 				<h2 class="products-title">Ofertas (<%= productosEnOferta.length %>)</h2>
 			</div>
-			<!-- Mostrar los juegos EN OFERTA dinámicamente (usando un for o foreach) -->
+			<!-- Mostrar los juegos Nuevos dinámicamente (usando un for o foreach) -->
 			<% productosEnOferta.forEach(producto => { %>
 				<div class="col-12 col-sm-6 col-lg-3">
 					<section class="product-box">
 						<a href="/products/detail/<%= producto.id %>">
-							<figure class="product-box_image">
+							<figure class="product-box-image">
 								<img src="/images/products/<%= producto.image %>" alt="imagen de producto">
 							</figure>
-							<article class="product-box_data">
-								<h2>$<%= producto.price %></h2>
-								<span><%= producto.discount %> % </span>
-								<p><%= producto.name %></p>
-								<i class="fas fa-truck"></i>
+							<article class="product-box-data">
+								<h2 class="price">$<%= producto.price %></h2>
+								<span class="discount"><p><%= producto.discount %> % </p></span>
+								<p class="game-title"><%= producto.name %></p>
+								<p class="game-description"><%= producto.description %></p>
 							</article>
 						</a>
 					</section>
 				</div>
 			<% }) %>
+			
 		</div>
 	</div>
-	<!-- /Ofertas -->
+<!-- /Ofertas -->
+
+
 </main>
 	<!-- footer -->
 	<%- include('partials/footer') %>
