--- a/src/views/products.ejs
+++ b/src/views/products.ejs
@@ -1,41 +1,49 @@
 <!DOCTYPE html>
 <html lang="es">
+
+<head>
+	<link rel="stylesheet" href="/css/store.css">
+</head>
 <!-- Include Head -->
-<%- include('partials/head', {title: 'Todos los juegos'}) %>
+<%- include('partials/head', {title: 'store'}) %>
+
 <body>
 	<!-- Header -->
 	<%- include('partials/header') %>
 	<!-- /Header -->
 
-	<!-- todos los juegos -->
+<main>
+
+	<!-- Todos los juegos -->
 	<div class="container products-wrapper">
 		<div class="row">
 			<div class="col-12">
-				<h2 class="products-title">Todos los productos (<%= productos.length %>)</h2>
+				<h2 class="products-title">Nuevos Lanzamientos (<%= productos.length %>)</h2>
 			</div>
-		
+			<!-- Mostrar los juegos Nuevos dinámicamente (usando un for o foreach) -->
 			<% productos.forEach(producto => { %>
 				<div class="col-12 col-sm-6 col-lg-3">
 					<section class="product-box">
 						<a href="/products/detail/<%= producto.id %>">
-							<figure class="product-box_image">
+							<figure class="product-box-image">
 								<img src="/images/products/<%= producto.image %>" alt="imagen de producto">
 							</figure>
-							<article class="product-box_data">
-								<h2>$<%= producto.price %></h2>
-								<span><%= producto.discount %> % </span>
-								<p><%= producto.name %></p>
-								<!-- <i class="fa-solid fa-cart-shopping"></i> -->
-								<i class="fas fa-truck"></i>
+							<article class="product-box-data">
+								<h2 class="price">$<%= producto.price %></h2>
+								<span class="discount"><p><%= producto.discount %> % </p></span>
+								<p class="game-title"><%= producto.name %></p>
+								<p class="game-description"><%= producto.description %></p>
 							</article>
 						</a>
 					</section>
 				</div>
 			<% }) %>
-		
+			
 		</div>
 	</div>
 	<!-- /todos los juegos -->
+
+</main>
 
 	<!-- footer -->
 	<%- include('partials/footer') %>
