--- a/src/views/products.ejs
+++ b/src/views/products.ejs
@@ -5,7 +5,7 @@
 	<link rel="stylesheet" href="/css/store.css">
 </head>
 <!-- Include Head -->
-<%- include('partials/head', {title: 'store'}) %>
+<%- include('partials/head', {title: 'Store'}) %>
 
 <body>
 	<!-- Header -->
