Refactor completo de CSS, EJS y arreglo de comportamiento MVC de STORE

--- a/src/views/product-create-form.ejs
+++ b/src/views/product-create-form.ejs
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
 <html lang="es">
+
+<head>
+	<link rel="stylesheet" href="/css/product-ceate.css">
+</head>
 <!-- Include Head -->
-<%- include('partials/head', {title: 'Formulario de creación'}) %>
+<%- include('partials/head', {title: 'Crear producto'}) %>
+
 <body>
-	<!-- Header -->
-	<%- include('partials/headerNavbar') %>
-	<!-- /Header -->
+<!-- Header -->
+<%- include('partials/header') %>
+<!-- /Header -->
+
+<main>
 
 	<div class="container products-wrapper">
 		<div class="row">
@@ -52,10 +59,17 @@
 		</div>
 
 	</div>
-	<!-- /todos los juegos -->
 
-	<!-- footer -->
-	<%- include('partials/footer') %>
-	<!-- /footer -->
+<!-- footer -->
+<%- include('partials/footer') %>
+<!-- /footer -->
+
+</body>	
+</html>
+
+<body>
+	
+</body>
+
 </body>	
 </html>
