--- a/src/views/product-edit-form.ejs
+++ b/src/views/product-edit-form.ejs
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
 <html lang="es">
+
+<head>
+	<link rel="stylesheet" href="/css/product-edit.css">
+</head>
 <!-- Include Head -->
-<%- include('partials/head', {title: 'Editando: ' + producto.name}) %>
+<%- include('partials/head', {title: 'Crear producto'}) %>
+
 <body>
-	<!-- Header -->
-	<%- include('partials/headerNavbar') %>
-	<!-- /Header -->
+<!-- Header -->
+<%- include('partials/header') %>
+<!-- /Header -->
+
+<main></main>
 
 	<div class="container products-wrapper">
 		<div class="row">
@@ -57,5 +64,8 @@
 	<!-- footer -->
 	<%- include('partials/footer') %>
 	<!-- /footer -->
+
+</main>
+
 </body>	
 </html>
