Refactor completo de CSS, EJS y arreglo de comportamiento MVC de STORE

--- a/src/views/products.ejs
+++ b/src/views/products.ejs
@@ -18,7 +18,7 @@
 	<div class="container products-wrapper">
 		<div class="row">
 			<div class="col-12">
-				<h2 class="products-title">Nuevos Lanzamientos (<%= productos.length %>)</h2>
+				<h2 class="products-title">Todos nuestros productos (<%= productos.length %>)</h2>
 			</div>
 			<!-- Mostrar los juegos Nuevos dinámicamente (usando un for o foreach) -->
 			<% productos.forEach(producto => { %>
