--- a/src/views/users/register.ejs
+++ b/src/views/users/register.ejs
@@ -85,7 +85,7 @@
                         <label><b>password: </b></label>
                         <input 
                             type="password" 
-                            name="contraseña" 
+                            name="password" 
                             placeholder="Contraseña" required=""
                             class="form-control <%=locals.errors && errors.password ? "is-invalid" : null %>"
                     >
