--- a/src/views/users/login.ejs
+++ b/src/views/users/login.ejs
@@ -27,6 +27,12 @@
                 <form action="/" method="post" class="formulario-login">
                         <div class="campo">
                             <input type="text" name="usuario" placeholder="Nombre de usuario" required="">
+                            <% if(locals.errors && errors.email) {%> 
+                                <div class ="text-danger">
+                                    <%= errors.email.msg %> 
+                                </div>
+                            <% } %> 
+                        
                         </div>
                         <div class="campo">
                             <input type="password" name="contraseña" placeholder="Contraseña" required="">
