--- a/src/views/detail.ejs
+++ b/src/views/detail.ejs
@@ -19,15 +19,15 @@
 		<div class="box-izquierda">
 
 			<figure class="product-detail-img">
-					<img src="/images/products/<%= producto.image %>" alt="product image" class="product-detail-img">
+					<img src="/images/products/<%= products.image %>" alt="product image" class="product-detail-img">
 					</figure>
 			
 		
 			<div class="product-detail">
 
-					<h2 class="product-title">Detalle del juego: <%= producto.name %> </h2>
+					<h2 class="product-title">Detalle del juego: <%= products.name %> </h2>
 
-					<p class="product-detail-description"><%= producto.description %></p>
+					<p class="product-detail-description"><%= products.description %></p>
 			</div>
 		</div>
 
@@ -36,12 +36,12 @@
 						<h2 class="product-detail-title"> Información De Pago</h2>
 						
 							<p class="product-detail-price small">
-								<span>$<%= producto.price %></span>
+								<span>$<%= products.price %></span>
 								/
-								<b><%= producto.discount %>% OFF</b>
+								<b><%= products.discount %>% OFF</b>
 							</p>
 							<p class="product-detail-price">
-							 	Precio Final $ <%=  producto.price - (producto.price * producto.discount / 100) %>
+							 	Precio Final $ <%=  products.price - (products.price * products.discount / 100) %>
 							</p>
 
 						<ul class="actions-list">
@@ -61,7 +61,7 @@
 
 							<div class="botones-eliminar-editar"> 
 						
-						<!-- <form action="/products/edit/<%= producto.id %>?_method=PUT" method="POST" style="display: inline-flex"> -->
+						<!-- <form action="/products/edit/<%= products.id %>?_method=PUT" method="POST" style="display: inline-flex"> -->
 						
 							<div class="campo-boton-editar">
 								<button type="submit" class="action-button-edit">EDITAR</button>
@@ -69,7 +69,7 @@
 						
 						<!-- </form> -->
 
-						<form action="/products/delete/<%= producto.id %>?_method=DELETE" method="POST" style="display: inline-flex">
+						<form action="/products/delete/<%= products.id %>?_method=DELETE" method="POST" style="display: inline-flex">
 							
 							<div class="campo-boton-eliminar">
 								<button type="submit" class="action-button-delete">ELIMINAR</button>
