--- a/src/views/users/login.ejs
+++ b/src/views/users/login.ejs
@@ -17,14 +17,14 @@
 <%- include('../partials/header', {title: 'Login'}) %>    
 
 <!--***********************************************************************
-                        Login Page
+                        Login Page 
 ************************************************************************-->
 
     <main class="main-login-section">
 
         <div class="login-widget">
 
-                <form action="/" method="post" class="formulario-login">
+                <form action="/users/login" method="post" class="formulario-login" enctype="multipart/form-data">
                         <div class="campo">
                             <input type="text" name="usuario" placeholder="Nombre de usuario" required="">
                             <% if(locals.errors && errors.email) {%> 
@@ -35,7 +35,7 @@
                         
                         </div>
                         <div class="campo">
-                            <input type="password" name="contraseña" placeholder="Contraseña" required="">
+                            <input type="password" name="password" placeholder="Contraseña" required="">
                         </div>
                         <div class="campo, boton-entrar">
                             <button type="submit">Entrar</button>
