--- a/src/views/users/profile.ejs
+++ b/src/views/users/profile.ejs
@@ -23,11 +23,11 @@ Debemos crear el profile
 
 <div class="container" style="margin-top: 40px;">
     <div class="row">
-        <h2> Hi <%user.fullName%> </h2>
-        <img src ="/public/images/avatars/<%=user.avatar %>">
+        <h2> Hi <%=users.fullName%> </h2>
+        <img src ="/public/images/avatars/<%=users.avatar %>">
         <br>
         <br>
-        <div class="alert alert-success"><%user.email%></div>
+        <div class="alert alert-success"><%users.email%></div>
     </div>
 </div>
 
