--- a/public/css/login.css
+++ b/public/css/login.css
@@ -4,12 +4,8 @@
     box-sizing: border-box;
     font-family: 'Chivo Mono', monospace;
 
-    }
+}
 
-
-/*////////////////////////////////////////////////////////////*/
-/*///////////////////  LOGIN /////////////////////////////////*/
-/*////////////////////////////////////////////////////////////*/
 
 main {
     /*
@@ -48,7 +44,7 @@ main {
 }
 
 .campo input {
-    /* width: 100%; */
+    width: 100%;
     /* height: 100%; */
     padding: 0.75rem 0;
 }
@@ -72,4 +68,13 @@ button, input {
     background-color: #03264C;
     border-radius: 4px;
     color: #ffffff;
+}
+
+.error {
+    background-color: #ffcccc;
+    border: 1px solid #ff0000;
+    padding: 0.5rem;
+    border-radius: 5px;
+
+    
 }
