--- a/public/css/register.css
+++ b/public/css/register.css
@@ -5,9 +5,7 @@
     font-family: 'Chivo Mono', monospace;
 }
 
-/*////////////////////////////////////////////////////////////*/
-/*///////////////////  Register //////////////////////////////*/
-/*////////////////////////////////////////////////////////////*/
+
 
 main {
     /*
@@ -46,7 +44,7 @@ main {
 }
 
 .campo input {
-    /* width: 100%; */
+    width: 100%;
     /* height: 100%; */
     padding: 0.75rem 0;
 }
@@ -70,4 +68,13 @@ button, input {
     background-color: #03264C;
     border-radius: 4px;
     color: #ffffff;
+}
+
+.error {
+    background-color: #ffcccc;
+    border: 1px solid #ff0000;
+    padding: 0.5rem;
+    border-radius: 5px;
+
+    
 }
